MarkovLanguageModelComputer now depends on FrequencyCounter interface Added default file sourced converter Created preprocessing interface called quantificator to also get the labels(names) of attributes which are result of preprocessing Created frequency counter interface instead of static frequency methods Created range helper class Deleted PreprocessingUnit interface since it is technically same as Preprocessor interface Created abstract task class which contains template method for executing a task. It has 2 steps. At first preprocess input and then execute actual task. Created string quantificator decorator which transforms actual preprocessing results into weka instances Introduced spellchecker functionality Implemented missing tasks like for autocomplete and spellchecking